--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -50,6 +50,16 @@ body {
     0 25px 50px 0 rgba(0, 0, 0, 0.1);
 }
 
+.todoapp__author{
+  position: absolute;
+  bottom: -60px;
+  right: 0;
+  font-size: 24px;
+  font-weight: 100;
+  text-align: center;
+  color: rgba(175, 47, 47, 1);
+}
+
 .todoapp input::-webkit-input-placeholder {
   font-style: italic;
   font-weight: 300;
@@ -81,7 +91,7 @@ body {
   font-size: 100px;
   font-weight: 100;
   text-align: center;
-  color: rgba(175, 47, 47, 0.15);
+  color: rgba(175, 47, 47, .5);
   -webkit-text-rendering: optimizeLegibility;
   -moz-text-rendering: optimizeLegibility;
   text-rendering: optimizeLegibility;
